--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic Authorization project"
 }
