--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~11.0.2",
-    "@angular/compiler": "~11.0.2",
-    "@angular/core": "~11.0.2",
-    "@angular/forms": "~11.0.2",
-    "@angular/platform-browser": "~11.0.2",
-    "@angular/platform-browser-dynamic": "~11.0.2",
-    "@angular/router": "~11.0.2",
+    "@angular/common": "~12.0.2",
+    "@angular/compiler": "~12.0.2",
+    "@angular/core": "~12.0.2",
+    "@angular/forms": "~12.0.2",
+    "@angular/platform-browser": "~12.0.2",
+    "@angular/platform-browser-dynamic": "~12.0.2",
+    "@angular/router": "~12.0.2",
     "@auth0/angular-jwt": "^5.0.2",
     "@ionic-native/core": "^5.30.0",
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.30.0",
     "@ionic/angular": "^5.5.0",
+    "@ionic/storage-angular": "^3.0.6",
     "core-js": "^3.7.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.3",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.1100.2",
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular-devkit/core": "~11.0.2",
-    "@angular-devkit/schematics": "~11.0.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.2",
-    "@angular/language-service": "~11.0.2",
+    "@angular-devkit/architect": "~0.1200.2",
+    "@angular-devkit/build-angular": "~12.0.2",
+    "@angular-devkit/core": "~12.0.2",
+    "@angular-devkit/schematics": "~12.0.2",
+    "@angular/cli": "~12.0.2",
+    "@angular/compiler-cli": "~12.0.2",
+    "@angular/language-service": "~12.0.2",
     "@ionic/angular-toolkit": "~3.0.0",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.8",
@@ -46,7 +46,7 @@
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~5.2.3",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
@@ -54,7 +54,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.2",
-    "typescript": "~4.0.2"
+    "typescript": "~4.2.4"
   },
   "description": "An Ionic Authorization project"
 }
