--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic/angular": "^6.0.3",
     "@ionic/storage-angular": "^3.0.6",
     "core-js": "^3.20.3",
-    "rxjs": "~6.6.3",
+    "rxjs": "^7.5.2",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
