--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@angular/common": "~13.1.3",
     "@angular/compiler": "~13.1.3",
-    "@angular/core": "~13.1.3",
+    "@angular/core": "^14.2.6",
     "@angular/forms": "~13.1.3",
     "@angular/platform-browser": "~13.1.3",
     "@angular/platform-browser-dynamic": "~13.1.3",
@@ -24,12 +24,12 @@
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
-    "@ionic/angular": "^6.0.3",
+    "@ionic/angular": "^6.3.1",
     "@ionic/storage-angular": "^3.0.6",
     "core-js": "^3.20.3",
     "rxjs": "^7.5.2",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.1301.4",
@@ -39,7 +39,7 @@
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.3",
     "@angular/language-service": "~13.1.3",
-    "@ionic/angular-toolkit": "~5.0.3",
+    "@ionic/angular-toolkit": "^7.0.0",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~17.0.10",
