--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~13.1.3",
-    "@angular/compiler": "~13.1.3",
+    "@angular/common": "^14.2.6",
+    "@angular/compiler": "^14.2.6",
     "@angular/core": "^14.2.6",
-    "@angular/forms": "~13.1.3",
-    "@angular/platform-browser": "~13.1.3",
-    "@angular/platform-browser-dynamic": "~13.1.3",
-    "@angular/router": "~13.1.3",
+    "@angular/forms": "^14.2.6",
+    "@angular/platform-browser": "^14.2.6",
+    "@angular/platform-browser-dynamic": "^14.2.6",
+    "@angular/router": "^14.2.6",
     "@auth0/angular-jwt": "^5.0.2",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
@@ -32,13 +32,13 @@
     "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.1301.4",
-    "@angular-devkit/build-angular": "~13.1.4",
-    "@angular-devkit/core": "~13.1.4",
-    "@angular-devkit/schematics": "~13.1.4",
-    "@angular/cli": "~13.1.4",
-    "@angular/compiler-cli": "~13.1.3",
-    "@angular/language-service": "~13.1.3",
+    "@angular-devkit/architect": "^0.1402.6",
+    "@angular-devkit/build-angular": "^14.2.6",
+    "@angular-devkit/core": "^14.2.6",
+    "@angular-devkit/schematics": "^14.2.6",
+    "@angular/cli": "^14.2.6",
+    "@angular/compiler-cli": "^14.2.6",
+    "@angular/language-service": "^14.2.6",
     "@ionic/angular-toolkit": "^7.0.0",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
@@ -54,7 +54,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.2",
-    "typescript": "~4.5.4"
+    "typescript": "~4.8.4"
   },
   "description": "An Ionic Authorization project"
 }
